--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:visibility="gone">
+        //收支fragment
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="260dp"
@@ -148,6 +149,7 @@
         </ListView>
 
     </LinearLayout>
+    //日程frag
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/content2"
         android:layout_width="match_parent"
