--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -94,6 +94,29 @@
         android:layout_gravity="center"
         android:background="@drawable/mylife_xiantiao2" />
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+
+        android:background="@color/background_white">
+
+        <TextView
+            android:id="@+id/mymusic"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:text="     我的音乐"
+            android:textColor="@color/text_black"
+            android:textSize="24dp" />
+
+
+    </RelativeLayout>
+
+    <ImageView
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@drawable/mylife_xiantiao2" />
 
 
     <RelativeLayout
